--- a/Example/CustomCamera/Base.lproj/Main.storyboard
+++ b/Example/CustomCamera/Base.lproj/Main.storyboard
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="LR8-bH-Sj3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="LR8-bH-Sj3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -36,25 +37,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vno-Lf-Vxi">
-                                <rect key="frame" x="42" y="308" width="76" height="30"/>
+                                <rect key="frame" x="15" y="308" width="98" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.09473914771801506" blue="0.19277650984611583" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Crop">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                                <state key="normal" title="Cropped Image">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="cameraClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6VO-zO-bhR"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTH-V7-Aby">
-                                <rect key="frame" x="265" y="308" width="85" height="30"/>
-                                <color key="backgroundColor" red="1" green="0.09473914772" blue="0.1927765098" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Flip">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="flipCamera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="od5-0v-Cyr"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LN2-Ow-nV1">
@@ -107,7 +97,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Flash Mode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RQb-rK-WAQ">
-                                <rect key="frame" x="42" y="364" width="98" height="21"/>
+                                <rect key="frame" x="15" y="364" width="98" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -128,22 +118,11 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Torch Mode" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uic-jg-WW8">
-                                <rect key="frame" x="42" y="431" width="98" height="21"/>
+                                <rect key="frame" x="15" y="431" width="98" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wqm-Mc-dkY">
-                                <rect key="frame" x="136" y="308" width="98" height="30"/>
-                                <color key="backgroundColor" red="1" green="0.09473914772" blue="0.1927765098" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Full">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="clickCropClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yBk-jj-aJH"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XSw-pB-QzK">
                                 <rect key="frame" x="157" y="427" width="40" height="30"/>
                                 <color key="backgroundColor" red="1" green="0.09473914772" blue="0.1927765098" alpha="1" colorSpace="calibratedRGB"/>
@@ -157,6 +136,28 @@
                                 </state>
                                 <connections>
                                     <action selector="setTorch:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5Kp-P2-1Qx"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wqm-Mc-dkY">
+                                <rect key="frame" x="124" y="308" width="91" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.09473914772" blue="0.1927765098" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                <state key="normal" title="Original">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickCropClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yBk-jj-aJH"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTH-V7-Aby">
+                                <rect key="frame" x="228" y="308" width="82" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.09473914772" blue="0.1927765098" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                <state key="normal" title="Flip Camera">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="flipCamera:" destination="BYZ-38-t0r" eventType="touchUpInside" id="od5-0v-Cyr"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -228,15 +229,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Opx-9H-UAM">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="475"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yQF-fg-FPI">
+                                <rect key="frame" x="101" y="629" width="186" height="30"/>
+                                <color key="backgroundColor" red="1" green="0.09473914772" blue="0.1927765098" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Crop Image">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cropClicked:" destination="4a1-dH-RgC" eventType="touchUpInside" id="VJq-mB-NpE"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="Opx-9H-UAM" secondAttribute="trailing" id="0qM-0C-g9B"/>
                             <constraint firstItem="Opx-9H-UAM" firstAttribute="top" secondItem="eYP-Rs-ltf" secondAttribute="bottom" id="CeG-m5-g4e"/>
+                            <constraint firstItem="y3v-Uy-Ccr" firstAttribute="top" secondItem="yQF-fg-FPI" secondAttribute="bottom" constant="8" id="L2T-aU-OQH"/>
                             <constraint firstItem="Opx-9H-UAM" firstAttribute="leading" secondItem="fvJ-TL-Z7I" secondAttribute="leading" id="SSq-xE-x0W"/>
-                            <constraint firstItem="y3v-Uy-Ccr" firstAttribute="top" secondItem="Opx-9H-UAM" secondAttribute="bottom" id="azH-TQ-9cx"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yQF-fg-FPI" secondAttribute="trailing" constant="72" id="Zc9-hg-sda"/>
+                            <constraint firstItem="y3v-Uy-Ccr" firstAttribute="top" secondItem="Opx-9H-UAM" secondAttribute="bottom" constant="128" id="azH-TQ-9cx"/>
+                            <constraint firstItem="yQF-fg-FPI" firstAttribute="leading" secondItem="fvJ-TL-Z7I" secondAttribute="leadingMargin" constant="85" id="urU-Nl-Ma3"/>
                         </constraints>
                     </view>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
